--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,16 +1,13 @@
-= Daily Journal Walkthrough
+= Daily Journal
 
-This repo has several tagged releases that any instructor can use as a boilerplate for walking students through the various stages of the application's development.
-
-TIP: Use `git checkout {_tag_}` to switch between stages. For part 8 - which involves using Browserify - you can look at the `browserify` branch.
-
-It is built elaborately so as to be something that students can continue to apply new concepts to without the need for any major refactoring. It ends after the Nutshell group project is completed, and before their React education begins. If it continued to React, then it would be a complete rewrite from the ground up, which is not necessary.
-
-== Browserify Setup
-
-If you switch to the `browserify` branch, make sure you go to the `src/lib` directory and `npm install` to get all of the required packages. Once that's complete, run `grunt` to start it all up again.
+Implementation of Daily Journal project. It currently doesn't have dynamic moods _(for one to many chapter)_ but it does have tagging _(many to many chapter)_.
 
 == Prerequisites
 
-1. The third stage requires each to install `json-server`, and then `grunt` so the student can launch both `http-server` and `json-server` simultaneously. Therefore Node.js is required on the student's machine as early as possible.
-1. Visual Studio Code must be installed.
+1. Install `json-server` with `npm i -g json-server`.
+
+== Running
+
+1. `cd` into API directory and run `json-server -p 8088 entries.json`
+1. In another terminal window, `cd` into the `src` directory and start your simple web server.
+1. Open your web server URL in the browser.
